[package]
name = "superdevs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
solana-client = "1.17.0"
solana-sdk = "2.2.1"
tokio = { version = "1.45.1", features = ["full"] }
dotenv = "0.15.0"
spl-token="8.0.0"
serde_json="1.0.140"
bs58="0.5.1"
base64 = "0.22.1"
